--- a/_posts/2011-4-06-state-your-purpose.textile
+++ b/_posts/2011-4-06-state-your-purpose.textile
@@ -9,9 +9,9 @@ p(meta). 4 April 2011 -- Charlottesville, VA
 
 Now that my admission cycle is over, and the dust has cleared, I’d like to write a few posts about the grad school application process. This first post will be about crafting your statement of purpose (sometimes known as a “personal statement”). It’s a statement that broadly describes your reasons for pursuing a PhD at a particular university.
 
-Around four months ago, I was quite interested in reading a few good examples of personal statements. Unfortunately, it seems that few people like to share. The one exception I found online (and later met at MIT’s visit days) was Jean Yang. So to current grad school applicants: I empathize with your pain. I’m crazy enough to share one of my statements, and you can find it here. This is the one I sent to Stanford, where I’ll be starting a CS PhD next fall.
+Around four months ago, I was interested in reading a few good examples of personal statements. Unfortunately, it seems that few people like to share. The one exception I found online (and later met at MIT’s visit days) was "Jean Yang":http://people.csail.mit.edu/jeanyang/. So to current grad school applicants: I empathize with your pain, and I’m crazy enough to share one of my statements. [[1]] This is the one I sent to Stanford, where I’ll be starting a CS PhD next fall.
 
-So how do you write a statement of purpose? In all honesty, I don’t actually know. However, I do understand what worked for me, and so I can mention a few things that I kept in mind when crafting my own statement:
+So how do you write a statement of purpose? In all honesty, I don’t actually know. However, I do understand what worked for me, and so I can mention a few things that I kept in mind:
 
 * *Write Well*: This is both fairly obvious, and obviously hard. I’m not qualified to give you writing advice, but two things that annoy me (and more notably, Stephen King) are passive voice and unnecessary adverbs. I recommend reading _On Writing_ and _The Elements of Style_.
 * *Talk About Research*: Write about things that relate to your abilities as a researcher. Nearly everything else is extraneous.
@@ -24,3 +24,5 @@ So how do you write a statement of purpose? In all honesty, I don’t actually k
 * *Your Childhood is not Relevant*: This is perhaps cliché, but don’t regale the admissions committee with tales from your childhood. They don’t want to hear about it. Only say things which speak to your research potential.
 
 That should be enough to get you started. I hope it goes without saying that you should take my advice only so far as you trust it. I was rather successful in my admission results, but that may have been _despite_ my personal statement. If you are applying now, I wish you luck. Hopefully, this post has given you some new ideas.
+
+fn1. My "personal statement":/resources/stanford.pdf. 
