--- a/_posts/2011-5-19-the-artful-mastering-of-goals.textile
+++ b/_posts/2011-5-19-the-artful-mastering-of-goals.textile
@@ -7,12 +7,12 @@ h1. {{ page.title }}
 
 p(meta). 19 May 2011 -- Charlottesville, VA
 
-I’ve been thinking lately about thinking: how to optimally construct mental frameworks that encourage long-run success. As part of this metacognition, I’ve thought about goals, and I’ve come to some unintuitive conclusions. While goals are wonderful things to have, goal-oriented thinking (if taken too far) can encourage an undesirable cognitive bias.
+I’ve been thinking lately about thinking: how to optimally construct mental frameworks that encourage long-run success. As part of this metacognition, I’ve thought about goals, and I’ve come to some unintuitive conclusions. While goals are generally useful, goal-oriented thinking (if taken too far) can encourage an undesirable cognitive bias.
 
-A goal is not the same as the motivation which brought it into existence, but is rather more precisely defined. This precision is what makes a goal useful — it provides an unambiguous measure of progress — but it also presents a subtle danger. In information theoretic terms, goals are lossy with respect to their motivating principles. Look at one goal, and it tells you little about why it exists, or what aspirations were its fundamental cause. 
+A goal is not the same as the motivation which brought it into existence, but is rather more precisely defined. This precision makes a goal useful — it provides an unambiguous measure of progress — but it also creates a subtle danger. Goals are lossy with respect to their motivating principles. Look at one goal, and it tells you little about why it exists, or what aspirations were its fundamental cause. 
 
-In setting goals, you lower a complex abstraction — the nature of your self — into the veins of reality. Your goals suggest what you are, but they are not _you_. And this is the danger. You can become so ruthless at achieving your goals that you abandon the underlying motivations which brought them into existence. You can master the how, but lose the why.
+In setting goals, you lower a complex abstraction — the nature of your self — into the veins of reality. They suggest what you are, but they are not _you_. And this is the danger. You can become so ruthless at achieving your goals that you abandon the underlying motivations which brought them into existence. You can master the how, but lose the why.
 
-Suppose you set a goal for various reasons. Over time, it grows in importance, and you invest in it as a measure of progress. You meet with some initial success, and you become excited. You begin to define yourself by the goal. Slowly, it usurps its originating abstraction, and deposes the information-rich motivations of self. Not good. You've shaved the dimensions of your character into neat and precise edges.
+Suppose you set a goal for various reasons. Over time, it grows in importance, and you invest in it as a measure of progress. You meet with some initial success, and become excited. You begin to define yourself by the goal. Slowly, it usurps its originating abstraction, and deposes the information-rich motivations of self. Not good. You've shaved the dimensions of your character into neat and precise edges.
 
 So it’s important to have goals, but don’t forget why you have them. Don’t forget what you are.
