--- a/_posts/2012-01-26-the-least-boring-programming-book-chapter-1-excerpt.textile
+++ b/_posts/2012-01-26-the-least-boring-programming-book-chapter-1-excerpt.textile
@@ -3,7 +3,7 @@ layout: post
 title: The Programming Djinn
 ---
 
-h1. {{ page.title }}
+h1. {{ page.title | upcase }}
 
 p(meta). The Least Boring Programming Book teaches Ruby programming to beginners in an unconventional way. This is an early excerpt -- think alpha chapter.
 
