--- a/_posts/2011-5-13-advice-for-undergrads-2.textile
+++ b/_posts/2011-5-13-advice-for-undergrads-2.textile
@@ -3,7 +3,7 @@ layout: post
 title: Advice for Undergrads
 ---
 
-h1. {{ page.title }}
+h1. {{ page.title | upcase }}
 
 p(meta). 13 May 2011 -- Vienna, VA
 
