--- a/_posts/2011-5-13-advice-for-undergrads-2.textile
+++ b/_posts/2011-5-13-advice-for-undergrads-2.textile
@@ -15,6 +15,6 @@ Despite the variance in these choices, however, I think that the way in which th
 
 In my case, doing research lent itself well to these kind of interactions. Professors are likely some of the most interesting people you will meet. Many of them are enormously one-sided, and this is precisely what makes them so fun to talk to. The common averageness of the general population is largely filtered for at the level of tenure-track academic. So if you can, build friendly relationships with professors. You may come to know, and to think about, things that before you hadn’t appreciated as thinkable.
 
-Where else can you cultivate these experiences? The next obvious place to look is among your peers. Form deep friendships. I see a number of ‘friend-groups’ formed by simply through circumstance (e.g. the people freshman-year dorm), and this is not a bad thing, but I’d recommend you befriend people for reasons beyond the randomness of housing selection. Such friends may prove more valuable.
+Where else can you cultivate these experiences? The next obvious place to look is among your peers. Form deep friendships. I see a number of ‘friend-groups’ formed through proximity (e.g. the people in freshman-year dorm), and this isn't a bad thing, but I’d recommend you befriend people for reasons beyond the randomness of housing selection. Such friends may prove more valuable.
 
 So my advice is twofold. Decide what you want, and optimize on it. But in the course of your optimization, seek out interesting experiences. Some of the most interesting (and useful) things to think about, you don’t even know are out there. The trick is to find them.
