--- a/academic.textile
+++ b/academic.textile
@@ -5,7 +5,11 @@ title: Academic
 
 h1. {{ page.title | upcase }}
 
-I'm currently doing a CS PhD at Stanford. I graduated with a B.A. in Computer Science from the University of Virginia.
+I'm doing a CS PhD at Stanford. I graduated with a B.A. in Computer Science from the University of Virginia.
+
+h2. Current Project(s)
+
+I'm working on a derivation-checking "rewrite rule system":http://en.wikipedia.org/wiki/Rewriting_system, for use in online education. 
 
 h2. Papers
 
