--- a/_posts/2012-01-30-blog-design-considerations.textile
+++ b/_posts/2012-01-30-blog-design-considerations.textile
@@ -47,7 +47,7 @@ A centered column fits well on most screen sizes, and since its width is em-base
 
 h2. Lists, Block-quotes, and Code
 
-Bullets bother me, so normal lists are set off slightly from the adjacent paragraphs through use of whitespace. I space list elements closer to one another than the margin with adjoining paragraphs. For instance:
+Bullets bother me, so normal lists are set off from the adjacent paragraphs through use of whitespace. I space list elements with less vertical whitespace than that of their margin with adjoining paragraphs. For instance:
 
 * A loyal list item tells no lies.
 * This list item betrayed me.
