--- a/_posts/2012-01-30-case-study-readability.textile
+++ b/_posts/2012-01-30-case-study-readability.textile
@@ -11,7 +11,7 @@ My VPS disappointed my blog and me. It failed, my trust withered. But I twisted 
 
 A few considerations stood out, as my thoughts turned over design decisions. For me, a few things happen on an ideal blog:
 
-# The type-face reads enjoyably.
+# The typeface reads enjoyably.
 # The column width minimizes lateral movement of the eyes.
 # Whitespace has meaning.
 # Content scales well at different screen sizes and zoom levels.
@@ -57,7 +57,7 @@ And now we're back to a paragraph. The list is distinctly set off, yet it remain
 # This number is lower, and can do nothing about it.
 # Higher numbers by birth should avoid egoism.
 
-I set block quotes by a slight margin and a subtle left border. They shouldn't distract.
+I set block quotes by a slight margin and a subtle left border. They shouldn't distract:
 
 bq. I AM A SICK MAN.... I am a spiteful man. I am an unattractive man. I believe my liver is diseased. However, I know nothing at all about my disease, and do not know for certain what ails me. I don't consult a doctor for it, and never have, though I have a respect for medicine and doctors. Besides, I am extremely superstitious, sufficiently so to respect medicine, anyway (I am well-educated enough not to be superstitious, but I am superstitious). No, I refuse to consult a doctor from spite. That you probably will not understand. Well, I understand it, though. Of course, I can't explain who it is precisely that I am mortifying in this case by my spite: I am perfectly well aware that I cannot "pay out" the doctors by not consulting them; I know better than anyone that by all this I am only injuring myself and no one else. But still, if I don't consult a doctor it is from spite. My liver is bad, well -- let it get worse!
 
