--- a/_posts/2012-01-30-case-study-readability.textile
+++ b/_posts/2012-01-30-case-study-readability.textile
@@ -24,11 +24,11 @@ Readability concerned me primarily. Aesthetics were secondary (stuffed tersely i
 
 h2. Typeface
 
-Serif typefaces read more easily to my eyes (perhaps to others, too [[1]]), so this narrowed the scope of my choice. "Google web fonts":http://www.google.com/webfonts#ChoosePlace:select provides a wonderful way to explore free typefaces, and I decided upon Lora. A sample:
+Serif typefaces read more easily to my eyes (perhaps to others, too [[1]]), but sans-serif tend to look better on the web. "Google web fonts":http://www.google.com/webfonts#ChoosePlace:select provides a wonderful way to explore free typefaces, and I eventually decided upon Gudea. A sample:
 
-* I wrote this in Lora.
-* *I wrote this in Lora.*
-* _I wrote this in Lora._
+* I wrote this in Gudea.
+* *I wrote this in Gudea.*
+* _I wrote this in Gudea._
 
 Other great options exist. Old Standard TT and Amethysta contended for the position, but lost. Also, my thanks to "Beautiful Web Type":http://hellohappy.org/beautiful-web-type/ for inspiration.
 
