--- a/_posts/2012-02-01-startup-paleo.textile
+++ b/_posts/2012-02-01-startup-paleo.textile
@@ -14,7 +14,7 @@ But until they become rich, many founders are poor. So how can they be Paleo? Is
 
 In the spirit of optimization, I ran a back of the envelope calculation. I wondered just how low I could get my food costs, if I tried in ernest. [[4]] But I gave myself two constraints. I needed the meals to provide at least 2,700 calories a day, and they also had to achieve the recommended daily values for all nutrients. 
 
-Were I to live as a monk, I can support myself at under than $10 a day. That's as much as some people spend for one meal, eating out. And this plan maximizes all the nutrients on Nutritiondata. [[5]]
+Were I to live as a monk, I can support myself at under than $10 a day. That's as much as some people spend for one meal, eating out. And this plan maximizes all the nutrients on "Nutritiondata":http://nutritiondata.self.com/. [[5]]
 
 The budget menu does break down monotonously: 9 eggs and 4 lbs of sweet potatoes [[6]] constitute the daily staples. These foods are cheap and extraordinarily nutrient-rich. Meat and vegetables only come as occasional luxuries. Given a choice, I would never eat this way. But I could, and that's the important thing. 
 
